version/0.16/_sources/api/solver/_autosummary/settings/background_2.rst.txt
:orphan:

.. _background_2:

background
==========

.. autoclass:: ansys.fluent.core.solver.settings_232.background_2.background
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ======================================================================================================

Attribute                                                                                                                                                             Summary

====================================================================   ======================================================================================================
:ref:`hide_environment_keep_effects <hide_environment_keep_effects>`                                      Hide 3D HDRI environment texture but keep its effect for rendering.

:ref:`environment_image <environment_image>`                                                                                Sets a 3D environment for the raytracing display.

:ref:`latitude <latitude_1>`                                                                       Rotate the environment along its latitude by entering degrees of rotation.

:ref:`longitude <longitude_1>`                                                                    Rotate the environment along its longitude by entering degrees of rotation.

:ref:`view_zoom <view_zoom>`                                                                                                   Set view zoom factor which sets field of view.

:ref:`show_backplate <show_backplate>`                                                        Controls whether a backplate color or image is shown on top of the environment.

:ref:`backplate_color <backplate_color>`                                                                                                             Set the backplate color.

:ref:`backplate_image <backplate_image>`                                   Set the backplate image. This will override the backplate color unless the image is set to 'none'.

====================================================================   ======================================================================================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`raytracing_options <raytracing_options>`       'raytracing_options' child.

==============================================   ===============================

