version/0.19/_sources/api/solver/_autosummary/settings/background_2.rst.txt
:orphan:

.. _background_2:

background
==========

.. autoclass:: ansys.fluent.core.solver.settings_241.background_2.background
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ======================================================================================================

Attribute                                                                                                                                                             Summary

====================================================================   ======================================================================================================
:ref:`hide_environment_keep_effects <hide_environment_keep_effects>`                                      Hide 3D HDRI environment texture but keep its effect for rendering.

:ref:`environment_image <environment_image>`                                                                                Sets a 3D environment for the raytracing display.

:ref:`vertical <vertical>`                                                                                 Rotate the environment vertically by entering degrees of rotation.

:ref:`horizontal <horizontal>`                                                                           Rotate the environment horizontally by entering degrees of rotation.

:ref:`spin <spin>`                                                                      Spin/Rotate the environment along its view direction by entering degrees of rotation.

:ref:`env_color <env_color>`                                                                                                                       Set the environment color.

:ref:`env_intensity <env_intensity>`                                                                                                     Change intensity of the environment.

:ref:`view_zoom <view_zoom>`                                                                                                   Set view zoom factor which sets field of view.

:ref:`show_backplate <show_backplate>`                                                        Controls whether a backplate color or image is shown on top of the environment.

:ref:`backplate_color <backplate_color>`                                                                                                             Set the backplate color.

:ref:`backplate_image <backplate_image>`                                   Set the backplate image. This will override the backplate color unless the image is set to 'none'.

:ref:`env_light_upvec <env_light_upvec>`                                                                                                             'env_light_upvec' child.

:ref:`env_light_dirvec <env_light_dirvec>`                                                                                                          'env_light_dirvec' child.

====================================================================   ======================================================================================================

.. rubric:: Included in:

==============================================   ===============================

Parent                                                                   Summary

==============================================   ===============================
:ref:`raytracing_options <raytracing_options>`       'raytracing_options' child.

==============================================   ===============================

